fixed issue with TSC dynamic selection list window x overflow

--- a/src/workingtitle-vcockpits-instruments-navsystems-g3000/html_ui/WorkingTitle/Pages/VCockpit/Instruments/NavSystems/AS3000/TSC/AS3000_TSC_Common.css
+++ b/src/workingtitle-vcockpits-instruments-navsystems-g3000/html_ui/WorkingTitle/Pages/VCockpit/Instruments/NavSystems/AS3000/TSC/AS3000_TSC_Common.css
@@ -260,6 +260,7 @@
       position: absolute;
       background-color: black;
       border: 0.4vh solid white;
+      padding: 2%;
       overflow-y: scroll; }
   .SelectionListWindow .content::-webkit-scrollbar {
     width: 1vw; }
@@ -277,6 +278,7 @@
   position: absolute;
   background-color: black;
   border: 0.4vh solid white;
+  padding: 2%;
   overflow-y: scroll; }
   .DynamicSelectionListWindow .content::-webkit-scrollbar {
     width: 1vw; }
