--- a/src/workingtitle-vcockpits-instruments-navsystems-g3000/html_ui/WorkingTitle/Pages/VCockpit/Instruments/NavSystems/AS3000/TSC/Horizontal/AS3000_TSC_Horizontal.css
+++ b/src/workingtitle-vcockpits-instruments-navsystems-g3000/html_ui/WorkingTitle/Pages/VCockpit/Instruments/NavSystems/AS3000/TSC/Horizontal/AS3000_TSC_Horizontal.css
@@ -2114,8 +2114,7 @@ as3000-tsc-horizontal-element {
       width: 50%;
       left: 25%;
       height: 80%;
-      bottom: 5%;
-      padding: 2%; }
+      bottom: 5%; }
       as3000-tsc-horizontal-element #Electricity .SelectionListWindow .content .gradientButton .mainText {
         font-size: 5vh; }
 
